# budgetia_ha

./: repository.yaml
BudgetIA/: .gitignore  CHANGELOG.md  DOCS.md  Dockerfile  GEMINI.md  README.md  config.yaml  debug_agno.py  debug_agno_agent_sig.py  debug_columns.py  debug_memory.py  debug_output.txt  debug_output_2.txt  debug_output_2_utf8.txt  debug_output_3.txt  debug_output_3_utf8.txt  debug_output_utf8.txt  inspect_auth.py  mypy.ini  planilha_mestra.xlsx  private_key.pem  public_key.pem  pyproject.toml  repository.yaml  run.sh  run_api.py  run_frontend.py  run_tests.py  setup_icons.py  start.py  test_output.txt  test_output_utf8.txt  verify_agent_memory.py  verify_channels.py  verify_habit_analysis.py  verify_import.py  verify_proactive_rules.py  verify_redis.py
BudgetIA/budgetia/: Dockerfile  config.yaml  pyproject.toml  run.sh
BudgetIA/budgetia/data/: auser_config.json  auser_config.jsons  dados_exemplo.json  telegram_chat_history.json  temp_user_strategy.py  user_config2.json  users.yaml
BudgetIA/budgetia/pwa/: index.html
BudgetIA/budgetia/scripts/: debug_push.py  export_keys_robust.py  read_vapid.py  run_pwa.py  update_icons.py  update_pwa_icons.py
BudgetIA/budgetia/src/: clear_cache.py
BudgetIA/budgetia/tests/: conftest.py  criar_planilha_teste.py  genereta_senha.py
BudgetIA/budgetia_ha/: Dockerfile
BudgetIA/data/: user_config.json
BudgetIA/pwa/: .gitignore  build_log.txt  index.html  package-lock.json  package.json  tailwind.config.js  theme.d.ts  theme.js  vite.config.ts
BudgetIA/pwa/src/: App.tsx  index.css  service-worker.ts
BudgetIA/scripts/: generate_vapid.py  run_api.py  run_web.py  update_constants.py  update_env.py
BudgetIA/src/: bot.py  config.py  create_admin.py  debug_budget_service.py  debug_budgets.py  debug_jwt.py  fix_user_status.py  main.py  reset_password.py  scheduler.py
BudgetIA/src/agent_implementations/: agno_agent.py  factory.py  langchain_agent.py
BudgetIA/src/api/: dependencies.py  main.py
BudgetIA/src/app/: chat_history_manager.py  chat_service.py  proactive_jobs.py
BudgetIA/src/application/: chat_history_manager.py  chat_service.py  notification_sender.py  proactive_jobs.py
BudgetIA/src/bot/: main.py
BudgetIA/src/core/: agent_runner_interface.py  base_tool.py  cache_service.py  email_service.py  exceptions.py  google_auth_service.py  ha_auth_service.py  llm_enums.py  llm_factory.py  llm_manager.py  logger.py  user_config_service.py
BudgetIA/src/finance/: excel_handler.py  factory.py  financial_calculator.py  financial_rules.py  planilha_manager.py  schemas.py  tool_loader.py  utils.py
BudgetIA/src/initialization/: file_preparer.py  strategy_generator.py  system_initializer.py
BudgetIA/src/prompts/: onboarding_prompt.txt  strategy_prompt.txt  strategy_system_prompt.txt  system_prompt.txt
BudgetIA/src/scheduler/: main.py
BudgetIA/src/web_app/: api_client.py  app.py  onboarding_manager.py  utils.py  💰_BudgetIA.py
BudgetIA/tests/: conftest.py  criar_planilha_teste.py  test_agno_agent_init.py  test_api_budgets.py  test_excel_handler_strategy.py  test_financial_calculator.py  test_mcp_diagnostic.py  test_planilha_manager.py
BudgetIA/tests/api/: test_budgets_api.py  test_categories_api.py  test_health.py  test_transactions_api.py
BudgetIA/tests/app/: test_chat_service.py  test_proactive_jobs.py
BudgetIA/tests/core/: conftest.py  test_llm_factory.py  test_user_config_service.py
BudgetIA/tests/performance/: bench_api.py  setup_bench.py
(+544 files in other folders)
